@@ -155,3 +155,11 @@ extension CLLocationCoordinate2D {
                        longitude >= 0 ? "E" : "W"))
     }
 }
+
+// extend CLLocationCoordinate2D to conform to Equatable
+
+extension CLLocationCoordinate2D: Equatable {
+    static public func ==(lhs: Self, rhs: Self) -> Bool {
+        return lhs.latitude == rhs.latitude && lhs.longitude == rhs.longitude
+    }
+}
